--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "frontend-app",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.4",
-    "query-string": "^9.1.0",
+    "axios": "^1.7.2",
+    "query-string": "^6.13.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
+    "react-icons": "^5.2.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "^5.0.1",
-    "redux": "^5.0.1",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^3.1.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,14 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "css-loader": "^7.1.2",
-    "file-loader": "^6.2.0",
-    "style-loader": "^4.0.0"
   }
 }
